# ecommerce-uit-research

./: README.md  crawler_bert_ner.ipynb  fine_tuning_t5_generate_w3schools_quiz.ipynb  review-lien-chatbot-sd.md  scripted-chatbot.md  webq-t5.md  webq.md  webq_t5.ipynb
ai-ecommerce/: README.md
automatic-question-answer-generation/: README.md
experiments/: GroqCloud.ipynb  README.md
fine-tuning/: README.md  fine-tuning-t5-generate-tag.ipynb  fine-tuning-t5-generate-w3schools-quiz.ipynb  fine-tuning-t5.ipynb
fine-tuning-t5/: bert-t5.md  crawler-bert-ner.md  fine-tuning-t5-generate-tag.ipynb  fine-tuning-t5-generate-w3schools-quiz.md  fine-tuning-t5.ipynb
legal-assistant/: README.md  TxtToJson.py  index.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
legal-assistant/Data/: TxtToJson.py  law.json  luat-an-ninh-quoc-gia.json  luat-bao-chi.json  luat-bao-hiem-xa-hoi.json
legal-assistant/RAG/: index.py
legal-assistant/RAG/Ollama/: ChromaDb.py  index.py
legal-assistant/RAG/Ollama/law/: chroma.sqlite3
legal-assistant/RAG/OpenAI/: TextChunking.py  index.py  pyproject.toml  tempCodeRunnerFile.py
presentation-generation/: README.md  requirements.txt
presentation-generation/data/raw_texts/: text1.txt  text2.txt
presentation-generation/src/: __init__.py  generate_responses.py  ingest_data.py  llm.py  retrieve_data.py  vector_db.py
